# shuffle-theorem

./: .gitignore  __init__.py  experiments.py  latex.py  lattice_paths.py  pyproject.toml  shuffle.py  symmetric_functions.py
Old/: generating_functions.py  lattice_paths.py  shuffle.py  symmetric_functions.py
notebooks/: notebook.py
notebooks/__marimo__/session/: notebook.py.json
src/shuffle_theorem/: __init__.py  dp_algebra.py  operators.py
