[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shuffle_theorem"
version = "0.1.0"
description = "SageMath add-on: tools for the Shuffle Theorem in combinatorics"
readme = "README.md"
authors = [
  { name = "Alessandro Iraci", email = "alessandro.iraci@unipi.it" }
]
home-page = "https://github.com/SashaIr/shuffle_theorem"
license = { file = "LICENSE" }
keywords = ["sage", "combinatorics", "lattice paths", "shuffle theorem"]
classifiers = [
  "Framework :: SageMath",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
  "sage>=10.0"
]

[tool.setuptools]
packages = ["shuffle_theorem"]
include-package-data = true